<resources>
    <string name="app_name">Filharmonia</string>
    <string name="applogo">AppLogo</string>
    <string name="repertoire">Repertuar</string>
    <string name="tickets">Bilety</string>
    <string name="showMap">Pokaż dojazd</string>
    <string name="title_activity_tickets">Bilety</string>
    <string name="concertName">Nazwa koncertu</string>
    <string name="dateTimeConcert">Data i godzina koncertu</string>
    <string name="concertRoomName">Sala koncertowa</string>
    <string name="performersName">Wykonawcy</string>
    <string name="row">Rząd</string>
    <string name="Position">Miejsce</string>
    <string name="Discount">Zniżka</string>
    <string name="buyTicket">Kup bilet</string>
    <string name="scena">Scena</string>
    <string name="selectDiscountSelect">Wybierz znizki</string>
    <string name="BuyTicketsButton">Kup bilety</string>
    <string name="TicketSum">Suma: 0zł</string>
    <string name="sum">Suma: </string>
    <string name="rowDiscount">Rząd: </string>
    <string name="PositionDiscount"> Miejsce: </string>
    <string name="PLN">zł</string>
    <string name="PaymentCanelled">Płatność anulowana</string>
    <string name="PaymentSuccess"><![CDATA[Płatność zatwierdzona. Trwa pobieranie biletu]]></string>
    <string name="title_activity_ticket_details">Szczegóły biletu</string>
    <string name="TicketInfo">Informacje o bilecie</string>
    <string name="ConcerDate">Data doncertu</string>
    <string name="TIcketCost">Cena biletu</string>
    <string name="DiscountTIcke">Znizka</string>
    <string name="ConcertRoom">Nazwa sali koncertowej</string>
    <string name="TPosition">Miejsce</string>
    <string name="Trow">Rząd</string>
    <string name="CalendarError">Nie można dodać wydarzenia do koalenarza ponieważ nie otrzymano uprawnienia.</string>
    <string name="connectionError">Bład pobrania danych z serwera</string>
    <string name="title_activity_repertoire">Repertuar</string>
    <string name="title_activity_concert">Informacje o koncercie</string>
    <string name="title_activity_selectseat">Wybierz miejsca siedzące</string>
    <string name="title_activity_discount">Wybierz zniżki</string>
    <string name="title_activity_payment">Płatność</string>
    <string name="noTicketError">Musisz zająć co najmniej jedno miejsce</string>
    <string name="ConcertNameDetails">Nazwa koncertu</string>
    <string name="ConcertDateDetails">Data doncertu</string>
    <string name="ConcertTicketDetails">Cena biletu</string>
    <string name="ConcertRoomDetalis">Nazwa sali koncertowej</string>
    <string name="ConcertPerformerDetalis">Wykonawca</string>
    <string name="ConcertUDetalis">Utwory</string>
    <string name="downloadTickets">Pobierz bilety</string>
    <string name="aksError">Błąd generowania zapytania</string>
    <string name="noSeat">Nie zaznaczono żadnego miejsca</string>
</resources>
