<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.ConcertActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:contextClickable="false"
        android:text="@string/ConcertNameDetails" />

    <TextView
        android:id="@+id/concertViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contextClickable="false"
        android:text="TextView"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contextClickable="false"
        android:padding="5dp"
        android:text="@string/ConcertDateDetails" />

    <TextView
        android:id="@+id/concertViewDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contextClickable="false"
        android:text="TextView"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contextClickable="false"
        android:padding="5dp"
        android:text="@string/ConcertTicketDetails" />

    <TextView
        android:id="@+id/concertViewCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contextClickable="false"
        android:text="TextView"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:contextClickable="false"
        android:text="@string/ConcertRoomDetalis" />

    <TextView
        android:id="@+id/concertViewRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contextClickable="false"
        android:text="TextView"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:padding="5dp"
        android:contextClickable="false"
        android:layout_height="wrap_content"
        android:text="@string/ConcertPerformerDetalis" />

    <TextView
        android:id="@+id/concertViewPerformer"
        android:layout_width="match_parent"
        android:contextClickable="false"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contextClickable="false"
        android:padding="5dp"
        android:text="@string/ConcertUDetalis" />

    <ListView
        android:id="@+id/concertViewRepertoire"
        android:layout_width="match_parent"
        android:contextClickable="false"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/BuyTicketButton"
        android:text="@string/buyTicket"/>

</LinearLayout>