<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Controller.TicketDetailsActivity"
    tools:showIn="@layout/activity_ticket_details"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:text="@string/TicketInfo"
        android:textColor="@android:color/black"
        android:padding="5dp"
        android:contextClickable="false"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:contextClickable="false"
        android:text="@string/concertName" />

    <TextView
        android:id="@+id/ticketViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contextClickable="false"
        android:text="TextView"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contextClickable="false"
        android:padding="5dp"
        android:text="@string/ConcerDate" />

    <TextView
        android:id="@+id/ticketViewDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contextClickable="false"
        android:text="TextView"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contextClickable="false"
        android:padding="5dp"
        android:text="@string/TIcketCost" />

    <TextView
        android:id="@+id/ticketViewCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contextClickable="false"
        android:text="TextView"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contextClickable="false"
        android:padding="5dp"
        android:text="@string/DiscountTIcke" />

    <TextView
        android:id="@+id/ticketViewDiscount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contextClickable="false"
        android:text="TextView"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:contextClickable="false"
        android:text="@string/ConcertRoom" />

    <TextView
        android:id="@+id/ticketViewRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contextClickable="false"
        android:text="TextView"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:contextClickable="false"
        android:text="@string/Trow" />

    <TextView
        android:id="@+id/ticketViewRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contextClickable="false"
        android:text="TextView"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:contextClickable="false"
        android:text="@string/TPosition" />

    <TextView
        android:id="@+id/ticketViewPosition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contextClickable="false"
        android:text="TextView"
        android:textSize="18sp" />

</LinearLayout>